k8s/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
